--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class="text-bottom">
-    <div>iwantthisdomain@protonmail.com</div>
+    <div>domainrequests@protonmail.com</div>
   </div>
 </div>
 
